# xeon-cache-test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  runner.cpp  runner.h
bin-E5-4620v4-gcc-7.5.0/: main.ii  main.s  runner.ii  runner.s  xeon_cache_test
plot/: quickplot.tex
plot/data/: beryll_result  elbait_result  gateway_result  saphir_result  snail03_result  snail04_result  snail05_result
